--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
 .container {
     width: 70%;
     margin: auto;
-    background-color: white;
+    background-color: #ADD8E6;
 }
 
 .row {
@@ -49,5 +49,48 @@ body {
 .photo {
     width: 100%;
     height: 100%;
-    background-color: green;
+    border-radius: 10px;
+    position: relative;
+    display: inline-block;
+}
+
+.back {
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    object-fit: cover;
+    position: absolute;
+}
+
+.front {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    border-radius: 10px;
+}
+
+.photo .front {
+    position: absolute;
+    background-color: #ffffff;
+    display: none;
+}
+
+.photo:hover .front {
+    display: inline;
+}
+
+.photo:hover .card-name {
+    display: inline;
+}
+
+.card-name {
+    width: 80%;
+    bottom: 10px;
+    left: 10px; 
+    background-color: #ffffff;
+    color: #E61986;
+    position: absolute; 
+    font-weight: bold;
+    text-align: center;
+    display: none; 
 }
